--- a/backend/package.json
+++ b/backend/package.json
@@ -11,11 +11,13 @@
   "license": "ISC",
   "packageManager": "pnpm@10.12.3",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^5.1.0",
-    "utils": "*",
-    "types": "*"
+    "types": "*",
+    "utils": "*"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
