Update backend with better env railguards + Fix tsconfig files in packages/*

--- a/backend/package.json
+++ b/backend/package.json
@@ -12,12 +12,15 @@
   "packageManager": "pnpm@10.12.3",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "types": "*",
-    "utils": "*"
+    "utils": "*",
+    "zod": "^3.25.67"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
+    "@types/dotenv": "^8.2.3",
     "@types/express": "^5.0.3",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
