--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,9 @@
 {
   "semi": true,
-  "singleQuote": true,
-  "printWidth": 100,
+  "singleQuote": false,
+  "printWidth": 80,
   "tabWidth": 2,
   "trailingComma": "es5",
-  "arrowParens": "always"
+  "arrowParens": "always",
+  "quoteProps": "consistent"
 }
