--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -19,6 +19,10 @@
     "include": [
         "**/*.ts"
     ],
+    "exclude": [
+        "node_modules",
+        "dist"
+    ],
     "references": [
         {
             "path": "../packages/utils"
@@ -26,5 +30,5 @@
         {
             "path": "../packages/types"
         }
-    ],
+    ]
 }
