Add project documents like scope.md, features.md and tasks.md

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -26,9 +26,17 @@
       ],
       "@types/*": [
         "../packages/types/*"
+      ],
+      "@shared/*": [
+        "../packages/types/*"
       ]
     },
-    "baseUrl": "."
+    "baseUrl": ".",
+    "plugins": [
+      {
+        "name": "next"
+      }
+    ]
   },
   "include": [
     "next-env.d.ts",
