--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -17,21 +17,15 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
+    "baseUrl": ".",
     "paths": {
       "@/*": [
         "./src/*"
       ],
-      "@utils/*": [
-        "../packages/utils/*"
-      ],
-      "@types/*": [
-        "../packages/types/*"
-      ],
       "@shared/*": [
-        "../packages/types/*"
+        "../shared/*"
       ]
     },
-    "baseUrl": ".",
     "plugins": [
       {
         "name": "next"
@@ -49,10 +43,11 @@
   ],
   "references": [
     {
-      "path": "../packages/utils"
+      "path": "../shared/utils"
     },
     {
-      "path": "../packages/types"
+      "path": "../shared/types"
     }
   ]
+  
 }
