--- a/shared/types/tsconfig.json
+++ b/shared/types/tsconfig.json
@@ -1,22 +1,19 @@
 {
     "compilerOptions": {
         "composite": true,
-        "declaration": true,
-        "declarationMap": false,
-        "emitDeclarationOnly": true,
         "strict": true,
         "target": "ESNext",
         "module": "NodeNext",
         "moduleResolution": "NodeNext",
         "isolatedModules": true,
         "esModuleInterop": true,
-        "skipLibCheck": true
+        "skipLibCheck": true,
+        "baseUrl": "."
     },
     "include": [
         "./**/*.ts"
     ],
     "exclude": [
-        "node_modules",
-        "dist"
+        "node_modules"
     ]
 }
