Add eslint config for backend + Add vscode settings.json

--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,13 @@
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@typescript-eslint/eslint-plugin": "^8.35.0",
+    "@typescript-eslint/parser": "^8.35.0",
+    "eslint": "^9.30.0",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^7.2.1",
+    "eslint-plugin-security": "^3.0.1",
     "nodemon": "^3.1.10",
     "supabase": "^2.26.9",
     "ts-node": "^10.9.2",
