--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-async-handler": "^1.2.0",
+    "helmet": "^8.1.0",
     "types": "*",
     "utils": "*",
     "zod": "^3.25.67"
