--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@supabase/supabase-js": "^2.50.2",
     "@tanstack/react-query": "^5.81.4",
     "@tanstack/react-query-devtools": "^5.81.4",
     "axios": "^1.10.0",
