--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "packageManager": "pnpm@10.12.3",
   "dependencies": {
+    "@google/generative-ai": "^0.21.0",
+    "@solana/wallet-standard-features": "^1.3.0",
     "@supabase/supabase-js": "^2.50.2",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
