--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,7 @@
   "license": "ISC",
   "packageManager": "pnpm@10.12.3",
   "dependencies": {
-    "@google/generative-ai": "^0.21.0",
+    "@google/genai": "^1.8.0",
     "@solana/wallet-standard-features": "^1.3.0",
     "@supabase/supabase-js": "^2.50.2",
     "cors": "^2.8.5",
