--- a/package.json
+++ b/package.json
@@ -3,7 +3,14 @@
   "private": true,
   "version": "1.0.0",
   "devDependencies": {
+    "@next/eslint-plugin-next": "^15.3.4",
+    "@typescript-eslint/eslint-plugin": "^8.35.1",
+    "@typescript-eslint/parser": "^8.35.1",
     "concurrently": "^9.2.0",
+    "eslint": "^9.30.1",
+    "eslint-config-next": "15.3.4",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "prettier": "^3.6.1",
     "typescript": "^5.8.3"
   },
