--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -7,6 +7,7 @@
         "rootDir": ".",
         "outDir": "dist",
         "baseUrl": ".",
+        "composite": true,
         "paths": {
             "@shared/*": [
                 "../shared/*"
