--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -199,8 +199,8 @@ max_frequency = "5s"
 
 # Configure logged in session timeouts.
 [auth.sessions]
-timebox = "14d"
-inactivity_timeout = "14d"
+timebox = "336h"
+inactivity_timeout = "336h"
 
 # This hook runs before a token is issued and allows you to add additional claims based on the authentication method used.
 # [auth.hook.custom_access_token]
