--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon --exec ts-node index.ts",
+    "dev": "nodemon --watch . --ext ts --exec ts-node index.ts",
     "build": "tsc -b",
     "start": "node dist/index.js"
   },
@@ -21,8 +21,6 @@
     "express": "^5.1.0",
     "express-async-handler": "^1.2.0",
     "helmet": "^8.1.0",
-    "types": "*",
-    "utils": "*",
     "zod": "^3.25.67"
   },
   "devDependencies": {
