--- a/backend/package.json
+++ b/backend/package.json
@@ -22,11 +22,13 @@
     "express-async-handler": "^1.2.0",
     "express-rate-limit": "^7.5.1",
     "helmet": "^8.1.0",
+    "multer": "^2.0.1",
     "zod": "^3.25.67"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/multer": "^2.0.0",
     "@typescript-eslint/eslint-plugin": "^8.35.0",
     "@typescript-eslint/parser": "^8.35.0",
     "eslint": "^9.30.0",
