--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,7 @@
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-intersection-observer": "^9.16.0",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.1",
     "types": "*",
