--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.19.1",
     "lucide-react": "^0.523.0",
+    "motion": "^12.23.12",
     "next": "15.3.4",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
